<resources>
    <string name="app_name">许愿墙</string>
    <string name="menu_settings">Settings</string>
    <string name="user_name">我是小潘潘</string>
    <string name="nav_info">信息</string>
    <string name="nav_find">发现心愿</string>
    <string name="nav_person">个人中心</string>
    <string name="nav_more">更多</string>
    <string name="nav_character">个性装扮</string>
    <string name="nav_setting">账号管理</string>
    <string name="rong_talking">会话</string>
    <string name="rong_qunzu">群组</string>
    <string name="rong_discuss">讨论组</string>
    <string name="input_group_name">请输入群名称</string>
    <string name="input_group_des">请输入群描述</string>
    <string name="say_something">说点什么吧...</string>
    <string name="agree">同意 《许愿墙服务协议》</string>
    <string name="remember">记住密码</string>
    <string name="forget">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password_confirm"> 确认  </string>
    <string name="get_verify_code"> 获取验证码  </string>
    <string name="message_confirm_code">短信验证码  </string>
    <string name="qq">QQ</string>
    <string name="weixin"> 微信 </string>
    <string name="weibo"> 微博  </string>
    <string name="third_login"> 使用其他账号登录  </string>
    <string name="register_is_null">"邮箱、密码、昵称 不能为空"</string>
    <string name="register_success">"注册成功"</string>
    <string name="register_failure">"注册失败"</string>
    <string name="register_input_email">"输入邮箱"</string>
    <string name="register_input_password">"输入密码"</string>
    <string name="register_input_nickname">"昵称"</string>
    <string name="register_btn_argee">"注册"</string>
    <string name="register_email_error">"邮箱地址不合法"</string>
    <string name="login_success">"登录成功"</string>
    <string name="login_failure">"登录失败"</string>
    <string name="register_user_agreement">"阅读用户协议"</string>
    <string name="register_agree">"同意并注册"</string>
    <string name="register_declaration">"仅供演示融云SDK功能使用"</string>
    <string name="register_refresh">"秒后重新获取"</string>
    <string name="new_password">设置新密码</string>
    <string name="input_account">输入账号</string>
    <string name="input_new_password">输入新密码</string>
    <string name="more">更多</string>
    <string name="logout">退出账号</string>
    <string name="more_person_info">我的资料</string>
    <string name="more_about_wishwall">关于许愿墙</string>
    <string name="more_version_updates">版本更新</string>
    <string name="more_feedback">意见反馈</string>
    <string name="advise">我有意见,我要说...</string>
    <string name="about_wishwall">关于许愿墙</string>
    <string name="exit_app">你确定退出当前账号？</string>
    <string name="warning">温馨提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="me_person_detail">\u0020\u0020个人资料</string>
    <string name="change_detail">编辑</string>
    <string name="save_detail">保存</string>
    <string name="change_person_detail">编辑资料</string>
    <string name="me_person_detail_name">昵称</string>
    <string name="me_person_detail_sex">性别</string>
    <string name="me_person_detail_phone">手机</string>
    <string name="me_person_detail_id">身份证号码</string>
    <string name="me_person_detail_qq">QQ号</string>
    <string name="me_person_detail_weixin">微信号</string>
    <string name="me_person_detail_qrcode">二维码名片</string>
    <string name="me_person_detail_born">出生日期</string>
    <string name="me_person_detail_local">所在地</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="me_input_detail_name">请输入你的昵称</string>
    <string name="me_input_detail_sex">请输入你的性别</string>
    <string name="me_input_detail_phone">请输入你的手机号</string>
    <string name="me_input_detail_id">请输入你的身份证号码</string>
    <string name="me_input_detail_qq">请输入你的QQ号</string>
    <string name="me_input_detail_weixin">请输入你的微信号</string>
    <string name="me_input_detail_born">请输入你的出生日期</string>
    <string name="me_input_detail_local">请输入你的所在地</string>
    <string name="me_scan_qrcode">扫描上面的二维码,加我为好友吧</string>
    <string name="icon_set_from_sdcard">从相册选择</string>
    <string name="icon_set_from_takephotos">拍摄照片</string>
    <string name="icon_set_cancel">取消</string>
    <string name="pro_city_area">省市区</string>
    <string name="wish">许愿条</string>
    <string name="send">发送</string>
    <string name="wish_your">许下你的心愿...</string>
    <string name="born_time">出生日期</string>
    <string name="born_set_okay">完成</string>
    <string name="choose_citys">选择城市</string>
    <string name="system_gps">系统定位</string>
    <string name="hot_citys">热门城市</string>
    <string name="municipalities">直辖市</string>
    <string name="citys_list">城市列表</string>
    <string name="app_version">1.0.2</string>
    <string name="proj_name">ShareSDK Socialization</string>
    <string name="sm_item_comment_like">评论与赞</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="comment_like_id">ssdk20131220190000</string>
    <string name="comment_like_title">ShareSDK“评论与赞”模块发布</string>
    <string name="comment_like_publich_time">2013-12-20 19:00</string>
    <string name="comment_like_author">ShareSDK</string>
    <string name="comment_like_comment_list">跟帖</string>
    <string name="like_success">点赞成功</string>
    <string name="like_fail">点赞失败</string>
    <string name="ssdk_myplatform">自定义平台</string>
    <string name="app_error_message">很抱歉，应用程序出现错误\n请将此错误报告提交给我\n我们会尽快修复这个问题。</string>
    <string name="main_name">融云</string>
    <string name="main_conversation">会话</string>
    <string name="main_group">群组</string>
    <string name="main_chatroom">聊天室</string>
    <string name="main_customer">客服</string>
    <string name="add_chat">发起聊天</string>
    <string name="add_select_group">加入群组</string>
    <string name="create_group">创建群组</string>
    <string name="add_voip">网络电话</string>
    <string name="add_contacts">通讯录</string>
    <string name="red_packet">红包</string>
    <string name="set_personal_information">我的账号</string>
    <string name="set_news_reminded">新消息提醒</string>
    <string name="set_privacy">隐私</string>
    <string name="set_set">设置</string>
    <string name="set_rongcloud">关于融云</string>
    <string name="set_sign_out">退出</string>
    <string name="set_logout">注销</string>
    <string name="de_save">"保存"</string>
    <string name="register_user_exits">"该邮箱已注册"</string>
    <string name="no_read_message">"···"</string>
    <string name="new_message_notice">消息免打扰</string>
    <string name="new_message_show">新消息提醒</string>
    <string name="new_message_voice">声音</string>
    <string name="new_message_vibration">震动</string>
    <string name="new_message_prompt_voice">新消息提示音</string>
    <string name="new_message_follow_system">跟随系统</string>
    <string name="add_validation">加我时需要验证</string>
    <string name="the_blacklist">黑名单</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="portrait">头像</string>
    <string name="my_username">昵称</string>
    <string name="good_name">好的名字可以让你的朋友更容易记住</string>
    <string name="new_name">新昵称</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="version_number">V2.1.0</string>
    <string name="dv_document">开发者文档</string>
    <string name="rongcloud_web">官方网站</string>
    <string name="new_version_update">当前版本</string>
    <string name="update_profile_success">昵称修改成功</string>
    <string name="update_profile_faiture">昵称修改失败</string>
    <string name="profile_not_null">昵称不能为空</string>
    <string name="de_set_clear_message">清空聊天记录</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_fr_delete">删除并退出</string>
    <string name="de_discussion_name">"讨论组名称"</string>
    <string name="de_setting_set_top">置顶</string>
    <string name="de_setting_conversation_notify">新消息通知</string>
    <string name="de_setting_clear_msg_name">清空聊天信息</string>
    <string name="search_label">Search</string>
    <string name="search_hint">搜索群组</string>
    <string name="search">search</string>
    <string name="commoditydescription">现货文化生活杂志 homeland家园2014年10月第106期</string>
    <string name="the_price">￥13.00</string>
    <string name="rc_connect">Connect</string>
    <string name="rc_app_self_chat">Self Chat</string>
    <string name="rc_friend">Friend</string>
    <string name="rc_information">send Information message</string>
    <string name="rc_app_conversationlist">enter conversationlist</string>
    <string name="friend_list_multi_choice_comfirt_btn">"确定(%1$s)"</string>
    <string name="de_item_delete_friend">"删除"</string>
    <string name="de_new_friends">"新的朋友"</string>
    <string name="friend_id">"Id:"</string>
    <string name="group_intro">"群简介"</string>
    <string name="group_number">"群人数"</string>
    <string name="group_myname">"我在本群的昵称"</string>
    <string name="group_join">"加入"</string>
    <string name="group_quit">"删除并退出"</string>
    <string name="group_chat">"聊天"</string>
    <string name="group_join_success">"加入群组成功"</string>
    <string name="group_quit_success">"退出群组成功"</string>
    <string name="group_is_full">"群组人数已满"</string>
    <string name="group_user_info">"群名片"</string>
    <string name="group_user_intro">修改你的群名片</string>
    <string name="personal_title">"详细资料"</string>
    <string name="personal_area">"地区"</string>
    <string name="personal_signature">"个性签名"</string>
    <string name="personal_send_message">"发消息"</string>
    <string name="add_friend">"添加到通讯录"</string>
    <string name="personal_send_voip">"语音聊天"</string>
    <string name="public_account_search">"搜索"</string>
    <string name="public_add_address">"添加好友"</string>
    <string name="friend_send">"好友请求已发送"</string>
    <string name="friend_send_success">"发送好友请求成功"</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_detail">"个人详情"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_conversation">"聊天设置"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_update_discussion">"修改讨论组昵称"</string>
    <string name="de_actionbar_update_group">"修改群组昵称"</string>
    <string name="de_actionbar_discussion">"聊天室"</string>
    <string name="de_actionbar_system">"系统消息"</string>
    <string name="phone_camera">Camera</string>
    <string name="de_actionbar_file">"文件预览"</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="de_plugins_image">图片</string>
    <string name="de_plugins_file">文件</string>
    <string name="de_plugins_camera">相机</string>
    <string name="de_group_list_default_discussion_name">讨论组</string>
    <string name="de_message_content_draft">[草稿]</string>
    <string name="de_message_at_me">[有人@我]</string>
    <string name="folder_all">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="register_agree_url">"http://www.wishingwall.net/user/views/agree.html"</string>
</resources>