<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_info"/>
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_find"/>
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_headset"
            android:title="@string/nav_person"/>
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_forum"
            android:title="@string/nav_more"/>
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_character"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/nav_character"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/nav_setting"/>
        </menu>
    </item>

</menu>
