<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="@string/warning"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@+id/textview"
            android:background="@color/gray_light" />

        <TextView
            android:id="@+id/exit_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:text="@string/exit_app"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:layout_above="@+id/linearlayout"
            android:layout_marginTop="25dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/exit_dialog_btn_selector"
                android:text="@string/cancel" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_light" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:background="@drawable/exit_dialog_btn_selector"
                android:text="@string/confirm" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>